--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-24 11:12+0000\n"
+"PO-Revision-Date: 2013-03-29 20:05+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-25 04:35+0000\n"
-"X-Generator: Launchpad (build 16540)\n"
+"X-Launchpad-Export-Date: 2013-03-30 05:06+0000\n"
+"X-Generator: Launchpad (build 16546)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -7086,7 +7086,7 @@ msgstr "ved radialhastighet"
 #. TRANSLATORS: Full phrase: Exoplanet detected by imaging
 #: plugins/Exoplanets/src/Exoplanet.cpp:176
 msgid "by imaging"
-msgstr "ved bilder"
+msgstr "ved avbildning"
 
 #. TRANSLATORS: Full phrase: Exoplanet detected by astrometry
 #: plugins/Exoplanets/src/Exoplanet.cpp:179
