Launchpad automatic translations update.

--- a/po/stellarium-skycultures/nb.po
+++ b/po/stellarium-skycultures/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-24 11:26+0000\n"
+"PO-Revision-Date: 2013-03-31 10:57+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-25 04:35+0000\n"
-"X-Generator: Launchpad (build 16540)\n"
+"X-Launchpad-Export-Date: 2013-04-01 05:06+0000\n"
+"X-Generator: Launchpad (build 16546)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -635,7 +635,7 @@ msgstr "Perlehopen"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
-msgstr ""
+msgstr "S Normae-hopen"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
@@ -4971,7 +4971,7 @@ msgstr "Merga"
 
 #: skycultures/western/star_names.fab:142
 msgid "Kochab"
-msgstr ""
+msgstr "Kochab"
 
 #: skycultures/western/star_names.fab:143
 msgid "Zubenelgenubi"
