update description for script sky_cultures.ssc

--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-04-02 22:34+0700\n"
+"POT-Creation-Date: 2013-04-03 17:54+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1781,7 +1781,7 @@ msgstr ""
 
 #. TRANSLATORS: Description of the sky culture tour script.
 #: src/translations.h:252
-msgid "Look round each installed sky culture."
+msgid "Look at each installed sky culture."
 msgstr ""
 
 #: src/translations.h:253
