--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 17:54+0700\n"
-"PO-Revision-Date: 2013-03-22 20:44+0000\n"
+"PO-Revision-Date: 2013-04-04 15:07+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-04 05:17+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-05 05:15+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -1920,7 +1920,7 @@ msgstr "Analemme"
 #. TRANSLATORS: Name of script
 #: src/translations.h:243
 msgid "Sky Culture Tour"
-msgstr ""
+msgstr "Tour des traditions célestes"
 
 #. TRANSLATORS: Description of the landscape tour script.
 #: src/translations.h:250
@@ -1930,7 +1930,7 @@ msgstr "Faire le tour des paysages installés"
 #. TRANSLATORS: Description of the sky culture tour script.
 #: src/translations.h:252
 msgid "Look at each installed sky culture."
-msgstr ""
+msgstr "Une visite de chaque tradition céleste installée"
 
 #: src/translations.h:253
 msgid "Script to demonstrate a partial lunar eclipse."
