--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 17:54+0700\n"
-"PO-Revision-Date: 2013-03-24 17:16+0000\n"
+"PO-Revision-Date: 2013-04-05 15:15+0000\n"
 "Last-Translator: Pavol Gajdoš <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-04 05:22+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-06 05:11+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -1889,7 +1889,7 @@ msgstr "Analema"
 #. TRANSLATORS: Name of script
 #: src/translations.h:243
 msgid "Sky Culture Tour"
-msgstr ""
+msgstr "Prehliadka nebeskej kultúry"
 
 #. TRANSLATORS: Description of the landscape tour script.
 #: src/translations.h:250
@@ -1899,7 +1899,7 @@ msgstr "Rozhliadnutie okolo každého nainštalovaného terénu."
 #. TRANSLATORS: Description of the sky culture tour script.
 #: src/translations.h:252
 msgid "Look at each installed sky culture."
-msgstr ""
+msgstr "Prehliadnuť každú nainštalovanú nebeskú kultúru"
 
 #: src/translations.h:253
 msgid "Script to demonstrate a partial lunar eclipse."
