--- a/po/stellarium-skycultures/be.po
+++ b/po/stellarium-skycultures/be.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2012-12-31 19:39+0000\n"
+"PO-Revision-Date: 2013-04-07 05:06+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:36+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-04-07 05:11+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 "Language: be_BY\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
@@ -524,7 +524,7 @@ msgstr "Скопішча «Страказа»"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "Туманнасьць «Хобат слана»"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -606,35 +606,35 @@ msgstr "Плянэтарная туманнасьць «Чарапаха»"
 
 #: nebulae/default/ngc2000names.dat:393
 msgid "Small Magellanic Cloud"
-msgstr ""
+msgstr "Малое Маґеланава воблака"
 
 #: nebulae/default/ngc2000names.dat:394
 msgid "Bow-Tie nebula"
-msgstr ""
+msgstr "Туманнасьць «Гальштук-матылёк»"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "Туманнасьць «Касач»"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Фэервэрк»"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Кіт»"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "Ґаляктыка «Голка»"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "Скопішча «Пэрла»"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
-msgstr ""
+msgstr "Скопішча S Нарожніка"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
@@ -4970,7 +4970,7 @@ msgstr "Мэрґа"
 
 #: skycultures/western/star_names.fab:142
 msgid "Kochab"
-msgstr ""
+msgstr "Кахаб"
 
 #: skycultures/western/star_names.fab:143
 msgid "Zubenelgenubi"
