Launchpad automatic translations update.

--- a/po/stellarium/bs.po
+++ b/po/stellarium/bs.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 17:54+0700\n"
-"PO-Revision-Date: 2013-01-26 13:20+0000\n"
+"PO-Revision-Date: 2013-04-07 19:25+0000\n"
 "Last-Translator: Kenan Dervišević <kenan3008@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-04 05:16+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-08 05:13+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -105,7 +105,7 @@ msgstr "Planetarna maglica"
 
 #: src/core/modules/Nebula.cpp:390
 msgid "Dark Nebula"
-msgstr ""
+msgstr "Tamna maglina"
 
 #: src/core/modules/Nebula.cpp:393
 msgid "Cluster associated with nebulosity"
