--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 17:54+0700\n"
-"PO-Revision-Date: 2013-04-03 19:15+0000\n"
+"PO-Revision-Date: 2013-04-08 12:14+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-04 05:21+0000\n"
-"X-Generator: Launchpad (build 16546)\n"
+"X-Launchpad-Export-Date: 2013-04-09 05:22+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -495,12 +495,12 @@ msgstr ""
 #: src/core/StelCore.cpp:1639
 #, qt-format
 msgid "Valid range of usage: between years %1 and %2, %3."
-msgstr ""
+msgstr "Gyldig bruksområde: Mellom år %1 og %2, %3."
 
 #: src/core/StelCore.cpp:1641
 #, qt-format
 msgid "Valid range of usage: between years %1 and %2."
-msgstr ""
+msgstr "Gyldig bruksområde: Mellom år %1 og %2."
 
 #: src/core/StelProjector.cpp:123
 msgid "Maximum FOV: "
@@ -1626,27 +1626,27 @@ msgstr "V"
 #. TRANSLATORS: Type of object
 #: src/translations.h:153
 msgid "planet"
-msgstr "planet"
+msgstr "Planet"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:155
 msgid "comet"
-msgstr "komet"
+msgstr "Komet"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:157
 msgid "asteroid"
-msgstr "asteroide"
+msgstr "Asteroide"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:159
 msgid "moon"
-msgstr "måne"
+msgstr "Måne"
 
 #. TRANSLATORS: Type of object
 #: src/translations.h:161
 msgid "plutoid"
-msgstr "plutoide"
+msgstr "Plutoide"
 
 #: src/translations.h:165
 msgid "Arabic"
@@ -3260,11 +3260,11 @@ msgstr "Diverse"
 
 #: src/translations.h:602
 msgid "Auto hide horizontal button bar"
-msgstr "Skjul den horisontale knappe-linjen automatisk"
+msgstr "Skjul horisontale knappelinje automatisk"
 
 #: src/translations.h:603
 msgid "Auto hide vertical button bar"
-msgstr "Skjul den vertikale knappe-linje automatisk"
+msgstr "Skjul vertikale knappelinje automatisk"
 
 #: src/translations.h:604
 msgid "Go to home"
