--- a/po/stellarium-skycultures/en_GB.po
+++ b/po/stellarium-skycultures/en_GB.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-10 23:41+0000\n"
+"PO-Revision-Date: 2013-04-09 14:14+0000\n"
 "Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:43+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-04-10 05:10+0000\n"
+"X-Generator: Launchpad (build 16550)\n"
 
 #: nebulae/default/ngc2000names.dat:218
 msgid "47 Tuc"
@@ -522,7 +522,7 @@ msgstr "Dragonfly cluster"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "Elephant's Trunk nebula"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -604,35 +604,35 @@ msgstr "Turtle planetary nebula"
 
 #: nebulae/default/ngc2000names.dat:393
 msgid "Small Magellanic Cloud"
-msgstr ""
+msgstr "Small Magellanic Cloud"
 
 #: nebulae/default/ngc2000names.dat:394
 msgid "Bow-Tie nebula"
-msgstr ""
+msgstr "Bow-Tie nebula"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "Iris nebula"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "Fireworks galaxy"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "Whale galaxy"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "Needle galaxy"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "Pearl cluster"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
-msgstr ""
+msgstr "S Normae cluster"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
