--- a/po/stellarium/nl.po
+++ b/po/stellarium/nl.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 17:54+0700\n"
-"PO-Revision-Date: 2013-04-09 17:04+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-04-10 11:40+0000\n"
+"Last-Translator: Michaël Bauwens <mich.bauwens@hotmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-10 05:10+0000\n"
+"X-Launchpad-Export-Date: 2013-04-11 05:08+0000\n"
 "X-Generator: Launchpad (build 16550)\n"
 "X-Poedit-Country: NETHERLANDS\n"
 "X-Poedit-Language: Dutch\n"
@@ -7469,7 +7469,7 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:367
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Datums van vorige en volgende volle maan"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:370
 msgid "Font color and size"
