--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-17 07:29+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-04-15 11:17+0000\n"
+"Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:42+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-04-16 04:36+0000\n"
+"X-Generator: Launchpad (build 16564)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -506,7 +506,7 @@ msgstr "Ojo de Cleopatra"
 
 #: nebulae/default/ngc2000names.dat:362
 msgid "Cooling Tower"
-msgstr ""
+msgstr "Torre de enfriamiento"
 
 #: nebulae/default/ngc2000names.dat:363
 msgid "Crowbar galaxy"
@@ -539,7 +539,7 @@ msgstr "Nebulosa Corazón"
 
 #: nebulae/default/ngc2000names.dat:373
 msgid "Heart-Shaped cluster"
-msgstr ""
+msgstr "Cúmulo en foma de corazón"
 
 #: nebulae/default/ngc2000names.dat:374
 msgid "Herring galaxy"
@@ -547,7 +547,7 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:375
 msgid "Hole in a cluster"
-msgstr ""
+msgstr "Hoyo en un cúmulo"
 
 #: nebulae/default/ngc2000names.dat:376
 msgid "Intergalactic Wanderer/Tramp"
@@ -564,11 +564,11 @@ msgstr ""
 #: nebulae/default/ngc2000names.dat:380 nebulae/default/ngc2000names.dat:381
 #: nebulae/default/ngc2000names.dat:382
 msgid "Leo Triplet"
-msgstr ""
+msgstr "Trío de Leo"
 
 #: nebulae/default/ngc2000names.dat:383
 msgid "McLeish's Object"
-msgstr ""
+msgstr "Objeto de McLeish"
 
 #: nebulae/default/ngc2000names.dat:384
 msgid "Miniature Spiral"
@@ -576,11 +576,11 @@ msgstr "Espiral en miniatura"
 
 #: nebulae/default/ngc2000names.dat:385
 msgid "Mirach's Ghost"
-msgstr ""
+msgstr "Fantasma de Mirach"
 
 #: nebulae/default/ngc2000names.dat:386
 msgid "Sailboat cluster"
-msgstr ""
+msgstr "Cúmulo velero"
 
 #: nebulae/default/ngc2000names.dat:387
 msgid "Seyfert's Sextet"
@@ -588,11 +588,11 @@ msgstr ""
 
 #: nebulae/default/ngc2000names.dat:388
 msgid "Soul nebula"
-msgstr ""
+msgstr "Nebulosa alma"
 
 #: nebulae/default/ngc2000names.dat:389
 msgid "Southern Integral Sign"
-msgstr ""
+msgstr "Signo Integral del Sur"
 
 #: nebulae/default/ngc2000names.dat:390
 msgid "Starfish cluster"
@@ -600,7 +600,7 @@ msgstr "Cúmulo Estrella de Mar"
 
 #: nebulae/default/ngc2000names.dat:391
 msgid "Superwind-Galaxy"
-msgstr ""
+msgstr "Galaxia Superviento"
 
 #: nebulae/default/ngc2000names.dat:392
 msgid "Turtle planetary nebula"
@@ -612,31 +612,31 @@ msgstr "Pequeña Nube de Magallanes"
 
 #: nebulae/default/ngc2000names.dat:394
 msgid "Bow-Tie nebula"
-msgstr ""
+msgstr "Nebulosa cuerda de arco"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "Nebulosa iris"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "Galaxia fuegos artificiales"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "Galaxia ballena"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "Galaxia aguja"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "Cúmulo perla"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
-msgstr ""
+msgstr "Cúmulo S Normae"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
@@ -3962,39 +3962,39 @@ msgstr "Los Corredores del Cielo"
 
 #: skycultures/tongan/constellation_names.eng.fab:1
 msgid "Toloatonga"
-msgstr ""
+msgstr "Toloatonga"
 
 #: skycultures/tongan/constellation_names.eng.fab:2
 msgid "Lua tangata"
-msgstr ""
+msgstr "Lua tangata"
 
 #: skycultures/tongan/constellation_names.eng.fab:3
 msgid "Toloa"
-msgstr ""
+msgstr "Toloa"
 
 #: skycultures/tongan/constellation_names.eng.fab:4
 msgid "Tu'ulalupe"
-msgstr ""
+msgstr "Tu'ulalupe"
 
 #: skycultures/tongan/constellation_names.eng.fab:5
 msgid "Toloalahi"
-msgstr ""
+msgstr "Toloalahi"
 
 #: skycultures/tongan/constellation_names.eng.fab:6
 msgid "Fungasia"
-msgstr ""
+msgstr "Fungasia"
 
 #: skycultures/tongan/constellation_names.eng.fab:7
 msgid "Tuinga ika"
-msgstr ""
+msgstr "Tuinga ika"
 
 #: skycultures/tongan/constellation_names.eng.fab:8
 msgid "Houmatoloa"
-msgstr ""
+msgstr "Houmatoloa"
 
 #: skycultures/tongan/constellation_names.eng.fab:9
 msgid "Fatanalua"
-msgstr ""
+msgstr "Fatanalua"
 
 #: skycultures/tongan/constellation_names.eng.fab:10
 msgid "Ae e'Uvea"
@@ -4014,11 +4014,11 @@ msgstr ""
 
 #: skycultures/tongan/star_names.fab:3
 msgid "Velitoa hififo"
-msgstr ""
+msgstr "Velitoa hififo"
 
 #: skycultures/tongan/star_names.fab:4
 msgid "Velitoa hahake"
-msgstr ""
+msgstr "Velitoa hahake"
 
 #: skycultures/tongan/star_names.fab:5
 msgid "Hikule'o"
@@ -4026,11 +4026,11 @@ msgstr ""
 
 #: skycultures/tongan/star_names.fab:6
 msgid "Monuafe"
-msgstr ""
+msgstr "Monuafe"
 
 #: skycultures/tongan/star_names.fab:7
 msgid "Motuliki"
-msgstr ""
+msgstr "Motuliki"
 
 #: skycultures/tupi/constellation_names.eng.fab:1
 msgid "White Ostrich"
@@ -4974,7 +4974,7 @@ msgstr "Merga"
 
 #: skycultures/western/star_names.fab:142
 msgid "Kochab"
-msgstr ""
+msgstr "Kochab"
 
 #: skycultures/western/star_names.fab:143
 msgid "Zubenelgenubi"
