--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-14 15:21+0700\n"
-"PO-Revision-Date: 2013-03-20 23:44+0000\n"
+"PO-Revision-Date: 2013-04-15 12:47+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-15 05:19+0000\n"
+"X-Launchpad-Export-Date: 2013-04-16 04:36+0000\n"
 "X-Generator: Launchpad (build 16564)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -669,6 +669,11 @@ msgid ""
 "cosine and square function. This is based on a possible periodicy described "
 "by Stephenson (%2). See for more info %3here%4."
 msgstr ""
+"Desde La Longitud del Día (LDD; como fue determinada por Stephenson & "
+"Morrison (%2)), Victor Reijs derivó una fórmula de %1T al usar una "
+"optimización Simplex con una función cuadrada y coseno. Esto está basado en "
+"una posible periodicidad descrita por Stephenson (%2). Véa más información "
+"%3aquí%4."
 
 #: src/core/StelCore.cpp:1497
 #, qt-format
@@ -679,6 +684,11 @@ msgid ""
 "Solar Eclipses: -1900 to +3000</em> (2006). This formula is also used in the "
 "solar, lunar and planetary ephemeris program SOLEX."
 msgstr ""
+"Esta solución por F. Espenak y J. Meeus, basados en Morrison & Stephenson "
+"(2004) y un ajuste polinomial a través de valores tabulados para 1600-2000, "
+"es usado para %1Sitio Web Eclipse de la NASA%2 y en su <em>Canon de Eclipses "
+"Solares de Cinco Milenios: -1900 a +3000</em> (2006). Esta fórmula también "
+"es usada en el programa SOLEX de efemérides solares y lunares."
 
 #: src/core/StelCore.cpp:1497
 msgid "Used by default."
@@ -973,8 +983,8 @@ msgid ""
 "Magnitude range: %3 - %4"
 msgstr ""
 "Tamaño de la descarga: %1MB\n"
-"Cuenta de Estrellas: %2 Million\n"
-"Rango de Magnitud: %3 - %4"
+"Conteo de estrellas: %2 millón\n"
+"Rango de magnitud: %3 - %4"
 
 #: src/gui/ConfigurationDialog.cpp:955 src/gui/ConfigurationDialog.cpp:991
 #, qt-format
@@ -2011,7 +2021,7 @@ msgstr "Analema"
 #. TRANSLATORS: Name of script
 #: src/translations.h:243
 msgid "Sky Culture Tour"
-msgstr ""
+msgstr "Paseo de Culturas Estelares"
 
 #. TRANSLATORS: Description of the landscape tour script.
 #: src/translations.h:250
@@ -2021,7 +2031,7 @@ msgstr "Mira alrededor cada paisaje instalado."
 #. TRANSLATORS: Description of the sky culture tour script.
 #: src/translations.h:252
 msgid "Look at each installed sky culture."
-msgstr ""
+msgstr "Mira cada cultura estelar instalada."
 
 #: src/translations.h:253
 msgid "Script to demonstrate a partial lunar eclipse."
@@ -2085,6 +2095,12 @@ msgid ""
 "emerges from Mars it is still eclipsed and dimmed in Mars' shadow, only to "
 "light up later."
 msgstr ""
+"Fobos encarrera delante de Marte y transita el sol, pasa a través de el y "
+"luego retrocede hacia el sol y parcialmente lo transita de nuevo (solo visto "
+"en el hemisferio sur de Deimos), después Marte eclipsa totalmente el sol "
+"mientras Fobos transita en la obscuridad entre Marte y Deimos. Cuando Fobos "
+"emerge desde Marte aún está eclipsado y desvanecido en la sombra,  sólo para "
+"iluminarse después."
 
 #: src/translations.h:265
 msgid ""
@@ -3290,7 +3306,7 @@ msgstr "Atmósfera"
 #: src/translations.h:573 src/ui_viewDialog.h:1250
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:322
 msgid "Azimuthal grid"
-msgstr "Cuadrícula Azimutal"
+msgstr "Cuadrícula azimutal"
 
 #: src/translations.h:574 src/ui_viewDialog.h:1272
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:299
@@ -3338,12 +3354,12 @@ msgstr "Línea del Ecuador"
 #: src/translations.h:583 src/ui_viewDialog.h:1248
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:327
 msgid "Equatorial grid"
-msgstr "Cuadrícula Ecuatorial"
+msgstr "Cuadrícula ecuatorial"
 
 #: src/translations.h:584 src/ui_viewDialog.h:1247
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:332
 msgid "Equatorial J2000 grid"
-msgstr "Cuadrícula Ecuatorial J2000"
+msgstr "Cuadrícula ecuatorial J2000"
 
 #: src/translations.h:585
 msgid "Fog"
@@ -3925,7 +3941,7 @@ msgstr "Centelleo:"
 #: src/ui_viewDialog.h:1219
 msgid "Dim faint stars when a very bright object is visible"
 msgstr ""
-"Oscurecer las estrellas débiles cuando un objeto muy brillantes está visible"
+"Oscurecer las estrellas débiles cuando un objeto muy brillante está visible"
 
 #: src/ui_viewDialog.h:1221
 msgid "Dynamic eye adaptation"
@@ -3945,19 +3961,19 @@ msgstr "THZ"
 
 #: src/ui_viewDialog.h:1229
 msgid "Limit Magnitudes (for unaided/binocular observers)"
-msgstr "Limitar Magnitudes (para observadores de binoculares/sin ayuda)"
+msgstr "Limitar magnitudes (para observadores de binoculares/simple vista)"
 
 #: src/ui_viewDialog.h:1231
 msgid "Limit Magnitudes"
-msgstr "Limitar Magnitudes"
+msgstr "Limitar magnitudes"
 
 #: src/ui_viewDialog.h:1233
 msgid "Stars to magnitude"
-msgstr "Estrellas a magnitud"
+msgstr "Magnitud de estrellas hasta"
 
 #: src/ui_viewDialog.h:1237
 msgid "Nebulas to magitude"
-msgstr "Magnitud de nebulosas a"
+msgstr "Magnitud de nebulosas hasta"
 
 #: src/ui_viewDialog.h:1240
 msgid "Constellations"
@@ -4252,7 +4268,7 @@ msgstr "Fecha y hora al inicio"
 
 #: src/ui_configurationDialog.h:1067
 msgid "Use a specific date and time when Stellarium starts up"
-msgstr "Utilizar hora y fecha especifica cuando se inicia Stellarium"
+msgstr "Utilizar una hora y fecha específica cuando se inicia Stellarium"
 
 #: src/ui_configurationDialog.h:1069
 msgid "Other:"
@@ -4734,7 +4750,7 @@ msgstr "CDV: %1"
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:793
 #, qt-format
 msgid "Dimensions: %1"
-msgstr "Dimenciones: %1"
+msgstr "Dimensiones: %1"
 
 #: plugins/Oculars/src/Oculars.cpp:1617
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:660
@@ -5621,7 +5637,7 @@ msgstr "Número de segmentos utilizados para trazar cada fin de la línea"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:664
 msgid "Fade length:"
-msgstr "Longitun de desvanecimiento:"
+msgstr "Longitud del desvanecimiento:"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:665
 #: plugins/Supernovae/src/ui_supernovaeDialog.h:239
@@ -5668,7 +5684,7 @@ msgstr "Órbita"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:677
 msgid "Catalog number:"
-msgstr "Número de catalogo:"
+msgstr "Número de catálogo:"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:678
 msgid "Description:"
@@ -6132,7 +6148,7 @@ msgstr "Archivos"
 
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:414
 msgid "Log telescope driver messages to files"
-msgstr "Registrar en archivos los mensajes del controlados de telescopio"
+msgstr "Registrar en archivos los mensajes del controlador de telescopio"
 
 #: plugins/TelescopeControl/src/ui_telescopeDialog.h:415
 msgid "Use telescope server executables (override built-in drivers)"
